# appbusiness

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
grafana/: datasources.yml
prometheus/: prometheus.yml
src/: main.py
src/api/structure/v1/service/: work_structure_service.py
src/api/tasks/v1/service/: tasks_service.py
src/api/users/v1/routers/: company_reg_router.py  member_reg_router.py
src/api/users/v1/service/: company_reg_service.py  jwt_auth_service.py  member_reg_service.py  work_data_service.py
src/models/: __init__.py  task_model.py
src/schemas/: account_schema.py  company_schema.py  invite_schema.py  member_schema.py  position_schema.py  secret_schema.py  struct_adm_position_schema.py  struct_adm_schema.py  task_schema.py  user_position_schema.py  user_schema.py
tests/: conftest.py
tests/fixtures/: test_cases.py
tests/fixtures/postgres/: __init__.py  tasks.py
tests/unit/: conftest.py
tests/unit/api/v1/routers/: test_company_reg_router.py  test_member_reg_router.py  test_tasks_router.py  test_work_data_router.py  test_work_structure_router.py
