[tool.poetry]
name = "appbusiness"
version = "0.1.0"
description = "Fastapi business management and control app"
authors = ["topgun <reddevil.23031991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.6.8"
redis = "^5.1.0"
requests = "^2.32.3"
sqlalchemy = "^2.0.35"
bcrypt = "^4.2.0"
asyncpg = "^0.29.0"
cryptography = "^43.0.1"
fastapi-cache2 = "^0.2.2"
gunicorn = "^23.0.0"
pyjwt = "^2.9.0"
loguru = "^0.7.2"
fastapi = {extras = ["all"], version = "^0.115.0"}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-dotenv = "^0.5.2"
sqlalchemy-utils = "^0.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["alembic/*", ".venv"]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
extend-select = ["W", "E"]
preview = true
ignore = [
    "ARG001", # unused-function-argument
    "ANN401", # any-type
    "B008", # function-call-in-default-argument
    "B904", # raise-without-from-inside-except
    "BLE001", # blind-except
    "CPY001", # missing-copyright-notice
    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D104", # undocumented-public-package
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D203", # one-blank-line-before-class
    "D205", # blank-line-after-summary
    "D213", # multi-line-summary-second-line
    "D401", # non-imperative-mood
    "DOC501", # docstring-missing-exception
    "FAST002", # fast-api-non-annotated-dependency
    "INP001", # implicit-namespace-package
    "RUF009", # function-call-in-dataclass-default-argument
    "S101", # assert
    "S608", # hardcoded-sql-expression
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pylint]
max-args = 7

